<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="2"
    android:padding="10dp"
    tools:context="com.example.oryossipof.alphahotal.questionnairesActivity">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >

        <TextView
            android:textSize="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Questionanaires_str" />

    </LinearLayout>

    <TextView
        android:paddingTop="20dp"
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Where_do_you_come_from_str"
        android:textSize="20sp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Spinner
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/spinner_ip"
            android:spinnerMode="dropdown"
            android:entries="@array/AreaArray"
            android:textColor="#000"/>


    </LinearLayout>

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/age_str"
        />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">



        <RadioGroup
            android:id="@+id/group1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        <RadioButton
            android:button="@null"
            android:drawableStart="@android:drawable/btn_radio"
            android:id="@+id/under15bt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/under_15_str" />


        <RadioButton
            android:button="@null"
            android:drawableStart="@android:drawable/btn_radio"
            android:id="@+id/over15bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/over_15_str" />


        </RadioGroup>

    </LinearLayout>


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/What_is_your_gender_str"

            />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >

        <RadioGroup
            android:id="@+id/group2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        <RadioButton
            android:button="@null"
            android:drawableStart="@android:drawable/btn_radio"
            android:id="@+id/malebt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male_str"
           />

        <RadioButton
            android:button="@null"
            android:drawableStart="@android:drawable/btn_radio"
            android:id="@+id/femalebt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female_str"
            />
        </RadioGroup>

    </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Are_you_a_vegeterian_str"
            android:textSize="20sp"
            />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textSize="20sp"
       >

<RadioGroup
    android:id="@+id/group3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
        <RadioButton
            android:button="@null"
            android:drawableStart="@android:drawable/btn_radio"
            android:id="@+id/vegNobt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/No_str"/>

        <RadioButton
            android:button="@null"
            android:drawableStart="@android:drawable/btn_radio"
            android:id="@+id/vegYesbt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Yes_str"
           />

</RadioGroup>
    </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Are_you_vegan_str"
            android:textSize="20sp"
            />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

<RadioGroup
    android:id="@+id/group4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
        <RadioButton
            android:button="@null"
            android:drawableStart="@android:drawable/btn_radio"
            android:id="@+id/veganNobt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/No_str"
            />



        <RadioButton
            android:button="@null"
            android:drawableStart="@android:drawable/btn_radio"
            android:id="@+id/veganYesbt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Yes_str"
            />



</RadioGroup>
    </LinearLayout>

    <TextView

        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Are_you_married_str"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
<RadioGroup
    android:id="@+id/group5"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

        <RadioButton
            android:button="@null"
            android:drawableStart="@android:drawable/btn_radio"
            android:id="@+id/marriedNobt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/No_str" />

        <RadioButton
            android:button="@null"
            android:drawableStart="@android:drawable/btn_radio"
            android:id="@+id/marriedYesbt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Yes_str"
           />

</RadioGroup>
    </LinearLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Do_you_have_children_str"
            android:textSize="20dp"

             />


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

<RadioGroup
    android:id="@+id/group6"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
        <RadioButton
            android:button="@null"
            android:drawableStart="@android:drawable/btn_radio"
            android:id="@+id/childrenNobt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/No_str" />

        <RadioButton
            android:button="@null"
            android:drawableStart="@android:drawable/btn_radio"
            android:id="@+id/childrenYesbt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Yes_str"
          />


</RadioGroup>
    </LinearLayout>

        <TextView

            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Your_trip_is_for_str"

            android:textSize="20sp"
          />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
<RadioGroup
    android:id="@+id/group7"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
        <RadioButton
            android:button="@null"
            android:drawableStart="@android:drawable/btn_radio"
            android:id="@+id/pleasurebt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pleasure_str"
           />

        <RadioButton
            android:button="@null"
            android:drawableStart="@android:drawable/btn_radio"
            android:id="@+id/bussinessbt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business_str"
            />

</RadioGroup>


    </LinearLayout>

        <TextView

            android:id="@+id/textView9"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Part_of_a_group_str"
            android:textSize="20sp"

            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

<RadioGroup
    android:id="@+id/group8"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

            <RadioButton
                android:button="@null"
                android:drawableStart="@android:drawable/btn_radio"
                android:id="@+id/groupNobt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/No_str"
               />

            <RadioButton
                android:button="@null"
                android:drawableStart="@android:drawable/btn_radio"
                android:id="@+id/groupYesbt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Yes_str"
                />


</RadioGroup>


</LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/validationerr"
            android:visibility = "invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_must_fill_all_fields_str"
            android:textColor="#ff0000"
            android:gravity="center"

            />
        <Button
            android:gravity="center"
            android:id="@+id/sendbt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bt2"
            android:text="@string/SEND_str"
            />
    </LinearLayout>
</LinearLayout>
</ScrollView>

