<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:background="@drawable/feedbg" >

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:id="@+id/text_title_what_you_think_about_us"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center_horizontal|center"
        android:text="@string/what_str"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="24sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Reception_str"
        android:textColor="#080909"
        android:textSize="22sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <RatingBar
        android:id="@+id/Recep_ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/areatextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_in_Str"
        android:textColor="#080909"
        android:textSize="22sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <RatingBar
        android:id="@+id/check_in_ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_out_str"
        android:textColor="#080909"
        android:textSize="22sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <RatingBar
        android:id="@+id/check_out_ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cleanliness_str"
        android:textColor="#080909"
        android:textSize="22sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <RatingBar
        android:id="@+id/clean_ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Comfort_str"
        android:textColor="#080909"
        android:textSize="22sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <RatingBar
        android:id="@+id/comfort_ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Maintenance_str"
        android:textColor="#080909"
        android:textSize="22sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <RatingBar
        android:id="@+id/maintenance_ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Quality_of_food_str"
        android:textColor="#080909"
        android:textSize="22sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <RatingBar
        android:id="@+id/quality_of_food_ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/servicer_str"
        android:textColor="#080909"
        android:textSize="22sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <RatingBar
        android:id="@+id/service_ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/didtheappHelpTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Did the app make your hotel stay better?"
        android:textColor="#080909"
        android:textSize="22sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <RadioGroup
            android:id="@+id/group1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <RadioButton
                android:button="@null"
                android:id="@+id/Yesbt"
                android:drawableStart="@android:drawable/btn_radio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Yes" />

            <RadioButton
                android:button="@null"
                android:id="@+id/Nobt"
                android:drawableStart="@android:drawable/btn_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="No" />

        </RadioGroup>

    </LinearLayout>



    <Button
        android:id="@+id/feedback_page_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ratebt_str" />



</LinearLayout>
</ScrollView>